crates/cox-tui/tests/snapshots/approval__approval_modal_shows_source_agent.snap
---
source: crates/cox-tui/tests/approval.rs
expression: "buffer_to_string(&render(&state, 60, 7))"
---


 explore-2 asks: approve bash git push --force?
 rule Bash(git push:*) asks
 [y]es  [s]ession  [n]o  [e]dit
> Enter choose · Esc close · Up previous · Down next
- · ctx ▱▱▱▱▱ 0% · $0.00/5 · [default]
